Adicionando media query no footer

--- a/estilo.css
+++ b/estilo.css
@@ -324,6 +324,18 @@ section {
     .checkbox-itens{
         font-size: 17px;
     }
+
+    /* Footer */
+    
+    footer .linha1{
+        flex-direction: column;
+
+    }
+
+    footer .endereço{
+        width: 95%;
+        margin-bottom: 20px;
+    }
     }
 
     
